@@ -2,6 +2,7 @@ Changes in NEXT
 ===============
         * pstree: Check for process with show_parents #38
 	* pstree: Don't disable compaction with show pgids #34
+	* pstree: Fix storage leak !29
 
 Changes in 23.4
 ===============
